# naive-db

./: .gitignore  CMakeLists.txt  Gemfile  README.md
spec/: main_spec.rb
src/: Executor.cpp  Executor.h  Pager.cpp  Pager.h  Row.cpp  Row.h  Statement.cpp  Statement.h  Table.cpp  Table.h  main.cc
